--- a/composer.json
+++ b/composer.json
@@ -10,21 +10,24 @@
     ],
     "authors": [
         {
-            "name": "Creamarketing",
-            "homepage": "https://www.creamarketing.com"
-        },
-        {
             "name": "S2-Hub",
             "homepage": "https://www.s2-hub.com/"
         }
     ],
     "require": {
-        "silverstripe/framework": "^5"
+        "silverstripe/framework": "^5",
+        "symbiote/silverstripe-queuedjobs": "^4.0|^5.0",
+        "colymba/gridfield-bulk-editing-tools": "~3.0|~4.0"
     },
     "autoload": {
         "psr-4": {
             "S2Hub\\TextAssistant\\": "src/"
         }
+    },
+    "extra": {
+        "expose": [
+            "client/dist"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true
